--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     </head>
 
   <body>
-  <h1> hello </h1>  
+  <h1> hello </h1>
+      <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
+
 <img src="https://avatars.githubusercontent.com/u/92310546?v=4">
 
   </body>
