--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
   <h1> hello </h1>
       <ul>
-    <li>This</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <li>Is an</li>
     <li>Unordered list</li>
 </ul>
