--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
     <head>
+            <head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+   
+
         <title>My awesome web page</title>
-    </head>
+    
 
   <body>
   <h1> hello </h1>
